# cutleast-core-lib

./: .gitignore  MANIFEST.in  README.md  cutleast-core-lib.code-workspace  pyproject.toml
.github/workflows/: build.yaml
src/core/cache/: cache.py  function_cache.py
src/core/config/: exceptions.py  validation_utils.py
src/core/utilities/: filesystem.py  filter.py  localisation.py  localized_enum.py  logger.py  process_runner.py  qt_res_provider.py  reference_dict.py  updater.py
src/cutleast_core_lib/: base_app.py
src/cutleast_core_lib/builder/: __init__.py  build_backend.py  build_config.py  build_metadata.py  builder.py
src/cutleast_core_lib/builder/backends/: __init__.py  cx_freeze_backend.py  nuitka_backend.py
src/cutleast_core_lib/core/: downloader.py
src/cutleast_core_lib/core/archive/: archive.py  rar.py  sevenzip.py
src/cutleast_core_lib/core/archive_legacy/: zip.py
src/cutleast_core_lib/core/cache/: cache.py
src/cutleast_core_lib/core/config/: app_config.py  base_config.py  validation_utils.py
src/cutleast_core_lib/core/filesystem/: archive.py  file.py  scanner.py  utils.py
src/cutleast_core_lib/core/multithreading/: progress.py  progress_executor.py
src/cutleast_core_lib/core/utilities/: base_enum.py  clipboard.py  (+24 more)
src/cutleast_core_lib/scripts/: compile_mypyc_modules.py
src/cutleast_core_lib/test/: base_test.py  utils.py
src/test/: __init__.py  base_test.py  utils.py
src/ui/settings/: settings_page.py
src/ui/utilities/: icon_provider.py  stylesheet_processor.py
src/ui/widgets/: about_dialog.py  browse_edit.py  enum_dropdown.py  enum_selector.py  error_dialog.py  key_edit.py  search_bar.py  section_area_widget.py  updater_dialog.py
tests/builder/: test_build_metadata.py  test_builder.py
tests/core/cache/: test_cache.py
tests/core/config/: test_app_config.py
tests/core/filesystem/: test_scanner.py  test_utils.py
tests/core/utilities/: test_clipboard.py  test_datetime.py  test_env_resolver.py  test_filesystem.py  test_ini_file.py  test_reference_dict.py  test_scale.py  test_updater.py
tests/data/test_project/: pyproject.toml
tests/data/test_project/res/: ext_resources.json  style.qss
tests/data/test_project/src/: main.py
tests/ui/utilities/: test_tree_widget.py
tests/ui/widgets/: test_browse_edit.py  test_color_edit.py  test_enum_dropdown.py  test_enum_placeholder_dropdown.py  test_enum_radiobutton_widget.py  test_key_edit.py  test_placeholder_dropdown.py  test_search_bar.py  test_section_area_widget.py  test_tree_widget_editor.py
(+69 files in other folders)
